# pyrdfrules

./: .gitignore  README.md  build.sh  data.json  init.sh  package-lock.json  package.json  publish.sh  pyproject.toml  requirements.txt  run.sh  test.sh  update_schema.sh
.github/workflows/: ci.yaml  docs.yml  publish.yaml  python-app.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_026317f8921593b3_commondata_py.html  z_026317f8921593b3_jsonformats_py.html  z_026317f8921593b3_pipeline_py.html  z_026317f8921593b3_rdfrules_py.html  z_026317f8921593b3_release_py.html  z_026317f8921593b3_workspace_py.html  z_026317f8921593b3_writers_py.html  z_1567f132fa00d7db_task_py.html  z_1567f132fa00d7db_task_runner_py.html  z_1567f132fa00d7db_task_updater_py.html  z_258e3a7267f08075_http_api_urls_py.html  z_258e3a7267f08075_http_rdfrules_api_context_py.html  z_258e3a7267f08075_http_rdfrules_api_py.html  z_258e3a7267f08075_rdfrules_api_context_py.html  z_258e3a7267f08075_rdfrules_api_py.html  z_3f4ac0145fe2aec2_task_not_found_exception_py.html  z_52181b5a7f8e438a_workspace_directory_py.html  z_52181b5a7f8e438a_workspace_file_py.html  z_52181b5a7f8e438a_workspace_item_py.html  z_52181b5a7f8e438a_workspace_py.html  z_52181b5a7f8e438a_workspace_tree_py.html  z_69f746c7f8320ebd_resultrule_py.html  z_69f746c7f8320ebd_ruleset_py.html  z_6c2edc28bcbfa107_get_http_client_py.html  z_6c2edc28bcbfa107_http_client_py.html  z_6c2edc28bcbfa107_url_py.html  z_7bc69714625e2565_engine_py.html  z_7bc69714625e2565_http_engine_py.html  z_7bc69714625e2565_local_http_engine_py.html  z_7bc69714625e2565_remote_http_engine_py.html  z_816aba43ccb6cee7_measure_py.html  z_94b19548fee562f0_confusion_matrix_py.html  z_94b19548fee562f0_histogram_py.html  z_ac195a84a84fbd6e_event_dispatcher_py.html  z_ae694264a3dbc43c_workspace_api_py.html  z_ae694264a3dbc43c_workspace_http_api_py.html  (+26 more)
src/codegen/: generate_common_types.py  generate_docs.py  generate_models.py  generate_tasks.py  generated_tasks.py  pipeline.py
src/pyrdfrules/: __about__.py  __init__.py  application.py  base_rdfrules_object.py  common.py  config.py  index.py  main.py  prediction.py  prediction_tasks.py  rdfgraph.py  rdfrules.py  ruleset.py
src/pyrdfrules/api/: __init__.py  http_api_urls.py  http_rdfrules_api.py  http_rdfrules_api_context.py  rdfrules_api.py  rdfrules_api_context.py
src/pyrdfrules/api/cache/: __init__.py  cache_api.py  cache_http_api.py
src/pyrdfrules/api/task/: task_api.py  task_http_api.py
src/pyrdfrules/api/workspace/: workspace_api.py  workspace_http_api.py
src/pyrdfrules/common/: __init__.py  base_actions.py  base_transformations.py
src/pyrdfrules/common/event/: event_dispatcher.py
src/pyrdfrules/common/exception/: __init__.py  pyrdfrules_exception.py
src/pyrdfrules/common/file/: __init__.py  workspace.py  workspace_directory.py  workspace_file.py  workspace_item.py  workspace_tree.py
src/pyrdfrules/common/format/: confusion_matrix.py  histogram.py
src/pyrdfrules/common/graph/: graph.py  rdfgraph_actions.py  rdfgraph_transformations.py  (+2 more)
src/pyrdfrules/engine/: __init__.py  engine.py  http_engine.py  local_http_engine.py  remote_http_engine.py
src/pyrdfrules/pipeline/: pipeline.py  pipeline_item.py
src/pyrdfrules/rdfrules/: __init__.py  commondata.py  jsonformats.py  pipeline.py  rdfrules.py  release.py  workspace.py  writers.py
src/tests/: __init__.py  test_application.py  test_application_setup.py  test_evaluate.py  test_histogram.py  test_http_client.py  test_local_application.py  test_local_pipeline.py  test_multiple_local_instances.py  test_parsing.py  test_pipeline.py  test_remote_application.py  test_remote_http_engine.py  test_remote_workspace.py  test_rule_formatting.py
src/tests/data/: asset.txt  evaluate.json  task.json
src/tests/pipeline/: sample.py
tests/pipeline/: sample.py
(+79 files in other folders)
