[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[project]
name = "pyrdfrules"
dynamic = ["version"]
description = 'Python wrapper for RDFRules.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["rdfrules", "rdf", "rules"]
authors = [
  { name = "Karel Douda", email = "kareldouda1@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "install-jdk==1.1.0",
  "JPype1==1.5.0",
  "requests==2.32.3",
  "pydantic==2.6.4",
  "pydantic_core==2.16.3",
  "typing_extensions==4.10.0"
]

[project.urls]
Documentation = "https://github.com/KIZI/pyrdfrules"
Issues = "https://github.com/KIZI/pyrdfrules/issues"
Source = "https://github.com/KIZI/pyrdfrules"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.hatch.version]
path = "src/pyrdfrules/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/pyrdfrules tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["pyrdfrules"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["pyrdfrules", "tests"]
branch = true
parallel = true
omit = [
  "src/pyrdfrules/__about__.py",
]

[tool.coverage.paths]
pyrdfrules = ["src/pyrdfrules", "*/pyrdfrules/src/pyrdfrules"]
tests = ["tests", "*/pyrdfrules/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder"]
build-function = "hatch_jupyter_builder.npm_builder"
install-pre-commit-hook = true
optional-editable-build = true

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:src"

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "build"